# Kiggyshop

./: .dockerignore  Cargo.toml  README.md  TODO.md  compose.yaml
.github/workflows/: rust.yml  shop.yml
admin/: Cargo.toml  Dockerfile
admin/src/: main.rs  tests.rs
admin/web/: dashboard.js
backend/: .dockerignore  Cargo.toml  Dockerfile  init_db.py  orders.json  stock.json
backend/migrations/2023-10-29-042456_init/: down.sql  up.sql
backend/resources/admin/: dashboard.html  dashboard.js  style.css  unauthorized.html
backend/src/: env.rs  error.rs  main.rs  schema.rs  utils.rs
backend/src/admin/: mod.rs
backend/src/api/: metrics.rs  mod.rs  order.rs  resources.rs  stock.rs  stripe.rs  tests.rs
backend/src/mail/: confirmation.rs  mod.rs  send.rs  shipped.rs  templates.rs
backend/src/model/: cart.rs  item.rs  mod.rs  order.rs  schema.rs
backend/src/stripe/: mod.rs
backend/src/tests/: api.rs  db.rs  mail.rs  mock_order.json  mod.rs  test_db.rs
backend/templates/: confirmation.html  shipped.html
common/: Cargo.toml
common/migrations/2023-10-29-042456_init/: up.sql
common/src/: cart.rs  item.rs  lib.rs  order.rs  schema.rs  utils.rs
dev/scripts/: images.clj
frontend/: Cargo.toml  Trunk.toml  config.toml  elm-tooling.json  elm.json  index.html  out.css  package-lock.json  package.json  postcss.config.js  style.css  tailwind.config.js  vite.config.js
frontend/elm-stuff/0.19.1/: Cart.elmi  Components-Cart.elmi  Components-Checkout.elmo  Components-Dropdown.elmo  Components-Footer.elmi  Components-Footer.elmo  Components-Gallery.elmi  Components-Gallery.elmo  Components-Header.elmi  Lib.elmi  Lib.elmo  Main.elmi  Main.elmo  Messages.elmi  Messages.elmo  Stock.elmo
frontend/elm-stuff/generated-code/elm-community/elm-test/0.19.1-revision12/: elm.json
frontend/elm-stuff/generated-code/elm-community/elm-test/0.19.1-revision12/elm-stuff/0.19.1/: Cart.elmo  Components-Cart.elmo  Components-Checkout.elmi  Components-Checkout.elmo  Components-Dropdown.elmi  Components-Gallery.elmo  Components-Header.elmo  Components-Icons.elmi  Components-Icons.elmo  Components-Links.elmi  Components-Links.elmo  Components-Loading.elmi  Components-Loading.elmo  Components-Product.elmi  Components-Product.elmo  Lib.elmi  Lib.elmo  Main.elmi  Main.elmo  Messages.elmi  Messages.elmo  Ports.elmi  Ports.elmo  Stock.elmi
frontend/src/: Cart.elm  Lib.elm  Main.elm  Messages.elm  Ports.elm  Product.elm  Stock.elm  cart.rs  context.rs  elm.js  error.rs  index.html  main.rs  out.css  stock.json  utils.rs
frontend/src/Components/: Checkout.elm  Dropdown.elm  Footer.elm  Gallery.elm  Header.elm  Icons.elm  LazyImage.elm  Links.elm  Loading.elm  Product.elm
frontend/src/components/: cart.rs  cart_page.rs  completed.rs  dropdown.rs  error.rs  footer.rs  gallery.rs  header.rs  home.rs  links.rs  mod.rs  product.rs  product_card.rs  raw_html.rs  suspense.rs  svg.rs
frontend/src/hooks/: mod.rs
frontend/styles/: input.css  output.css
frontend/tests/: App.elm  Example.elm
fs-admin/: Dockerfile  kiggyshop  nginx.conf
fs-admin/resources/: login.html
fs-kiggyshop/: Dockerfile  kiggyshop  nginx.conf
model/: Cargo.toml
model/migrations/2024-05-19-142608_init/: down.sql  up.sql
model/migrations/2024-05-19-142611_address/: down.sql  up.sql
model/migrations/2024-06-02-231054_metrics/: up.sql
model/migrations/2024-06-05-121417_tracking/: down.sql  up.sql
model/src/: address.rs  cart.rs  item.rs  lib.rs  order.rs  schema.rs  user.rs
