[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = "0.9.0"
actix-web = "4.5.1"
dotenv = "0.15.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
futures = "0.3.29"