[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
diesel = { version = "2.1.3", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
  "r2d2",
] }
r2d2 = "0.8.10"
env_logger = "0.11.3"
dotenv = "0.15.0"
async-stripe = { version = "0.34.1", features = ["runtime-tokio-hyper"] }
model = { path = "../model/" }
url = "2.5.0"
diesel_logger = "0.3.0"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
