[package]
name = "kiggyserve"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kiggyserve"
# test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
diesel = { version = "2.1.6", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
  "r2d2",
] }
r2d2 = "0.8.10"
env_logger = "0.11.3"
async-stripe = { version = "0.37.0", features = ["runtime-tokio-hyper-rustls"] }
model = { path = "../model/" }
url = "2.5.0"
diesel_logger = "0.3.0"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
awc = { version = "3.5.0", features = ["rustls"] }
actix-extras = "0.1.0"
askama = "0.12.1"
lettre = { version = "0.11.7", default-features = false, features = [
  "tokio1-rustls-tls",
  "builder",
  "smtp-transport",
] }
lettre_email = "0.9.4"
chrono = { version = "0.4.38", features = ["serde"] }

[profile.test]
debug-assertions = false
