[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
yew = "0.21.0"
diesel = { version = "2.1.3", features = ["sqlite", "returning_clauses_for_sqlite_3_35"], optional = true }

[features]
frontend = []
backend = ["dep:diesel"]