[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
common = { version = "^0.1.0", path = "../common", features = ["frontend"], default-features = false}
gloo = "0.10.0"
gloo-file = { version = "0.3.0", features = ["futures"] }
reqwest = "0.11.22"
serde = { version = "1.0.189", features = ["derive"] }
yew-router = "0.18.0"
web-sys = {version = "0.3.65", features = ["HtmlDocument"]}
