[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.1.3", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
  "r2d2",
  "chrono",
] }
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
